# echoes-of-the-terminal

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  GAME_SETTINGS_BOOK.md  LICENSE  README.md  achievement_data.py  achievement_progress.py  achievement_system.py  argos_taunts.json  artifact_system.py  boss_phase_pack.json  boss_phase_pack_tools.py  combat_commands.py  combat_orchestration.py  combat_timer.py  constants.py  daily_challenge.py  data_loader.py  diver_class.py  echoes.spec  ending_system.py  fly.toml  i18n.py  lobby.py  main.py  mutator_system.py  mystery_system.py  pack_loader.py  progression_system.py  pyproject.toml  requirements-dev.txt  requirements.txt  route_map.py  run_loops.py  scenarios.json  theme_system.py  ui_renderer.py
.claude/: launch.json
assets/: banner_preview.html  demo_preview.html  logo_final.html  logo_preview.html  tokens.json
docs/: ASCENSION_BALANCE_TABLE.md  Design_100h_Roadmap.md  ITCH_PAGE.md  Master_Design.md  Scenario_Pack_02.md
locale/: en.json  ko.json
packs/: pack_23_cyber_noir.json  pack_24_dystopian_court.json  pack_25_neon_underground.json  pack_26_quantum_heist.json  pack_27_biomech_asylum.json  pack_28_orbital_tribunal.json  pack_29_abyssal_court.json
scripts/: generate_boss_phase_pack_template.py  itch_upload.sh  make_trailer_gif.py
tests/: test_achievement_progress.py  test_achievement_system.py  test_artifact_effects.py  test_ascension_runtime.py  test_boss_phase_pack.py  test_boss_phase_pack_tools.py  test_campaign_progression.py  test_combat_commands.py  test_daily_challenge.py  test_daily_history.py  test_data_loader.py  test_diver_class.py  test_diver_profile.py  test_e2e_run.py  test_ending_system.py  test_i18n.py  test_leaderboard.py  test_leaderboard_io.py  test_mutator_system.py  test_mystery_system.py  test_new_packs.py  (+13 more)
(+17 files in other folders)
